# simpleftpd

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.c  config.h  default.h  simpleftpd.c  simpleftpd.h  socket.c  socket.h  stack.c  stack.h  ui.c  ui.h  version.h  worker.c  worker.h
src/libsimpleftp/: CMakeLists.txt  command.c  command.h  context.c  context.h
